Bug 318262 - Potential infinite loop in onAcceptContact
Summary: Potential infinite loop in onAcceptContact
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: kded-module (other bugs)
Version First Reported In: git-latest
Platform: Other Linux
: NOR normal
Target Milestone: Future
Assignee: Telepathy Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-04-12 20:15 UTC by David Edmundson
Modified: 2013-04-12 20:16 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.6.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description David Edmundson 2013-04-12 20:15:24 UTC
Potential infinite loop in onAcceptContact

should never be able to trigger this, but it's still rubbish.
Comment 1 David Edmundson 2013-04-12 20:16:01 UTC
Git commit 6597638898fd408fcb58880e9716edfb4dcba767 by David Edmundson.
Committed on 12/04/2013 at 22:09.
Pushed by davidedmundson into branch 'kde-telepathy-0.6'.

Fix potential infinite loop accepting contacts

REVIEWED-BY: Rohan Garg

M  +1    -1    contact-request-handler.cpp

http://commits.kde.org/telepathy-kded-module/6597638898fd408fcb58880e9716edfb4dcba767