Fix potential infinite loop accepting contacts

REVIEWED-BY: Rohan Garg
BUG: 318262